# tinydb-serialization

./: .travis.yml  LICENSE  README.rst  pyproject.toml  setup.py  test_serialization.py
.github/workflows/: ci-workflow.yml  publish-workflow.yml
tests/: test_date_serializer.py
tinydb_serialization/: __init__.py  serializers.py
